:recycle: Switch ImportsContextCustomizer to use MergedAnnotations.search #36211
Use `MergedAnnotations.search` in `ImportsContextCustomizer` rather than
needing dedicated search logic.